--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,19 +1,23 @@
-body {
+*{
     margin: 0;
-    overflow: hidden;
+    padding: 0;
+    /* TODO: check next in docs.*/
+    overflow: hidden; 
+    box-sizing: border-box;
 }
 
 canvas {
     display: block;
 }
 
+/* TODO: do cleaning of next. */
 #welcomeScreen {
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: url('frontend/assets/textures/background.png') repeat;
+    background: url('assets/textures/background.png') repeat;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -27,7 +31,7 @@ canvas {
 
 #joinButton {
     cursor: pointer;
-    background: url('frontend/assets/textures/button.png') no-repeat; /* Fix background size */
+    background: url('assets/textures/button.png') no-repeat; /* Fix background size */
     width: 200px;
     height: 50px;
     background-size: cover;
@@ -40,3 +44,4 @@ canvas {
 #joinButton:hover {
     background-position: 0 -50px; /* Fix background position on hover */
 }
+/* TODO: add for assets display:None */
