--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,47 +1,9 @@
-*{
+* {
     margin: 0;
     padding: 0;
-    /* TODO: check next in docs.*/
-    overflow: hidden; 
-    box-sizing: border-box;
+    overflow:hidden;
 }
 
-canvas {
-    display: block;
+#background {
+    display: none;
 }
-
-/* TODO: do cleaning of next. */
-#welcomeScreen {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url('assets/textures/background.png') repeat;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-#title {
-    font-size: 2em;
-    margin-bottom: 20px;
-}
-
-#joinButton {
-    cursor: pointer;
-    background: url('assets/textures/button.png') no-repeat; /* Fix background size */
-    width: 200px;
-    height: 50px;
-    background-size: cover;
-    text-align: center;
-    line-height: 50px;
-    color: white;
-    font-size: 1.2em;
-}
-
-#joinButton:hover {
-    background-position: 0 -50px; /* Fix background position on hover */
-}
-/* TODO: add for assets display:None */
